[package]
name = "jdproof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "nightly", "serde", "alloc"] }  
rand = { version = "0.7"} 
merlin = { version = "2", default-features = false }
bulletproofs = { git = "https://github.com/dalek-cryptography/bulletproofs", tag = "2.0.0" }


